--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   http: ^1.2.1
   crypto: ^3.0.3
   fl_chart: ^0.68.0
+  desktop_multi_window: ^0.2.0
+  window_manager: ^0.4.3
 
 dev_dependencies:
   flutter_test:
